--- a/main/mainpage.css
+++ b/main/mainpage.css
@@ -664,6 +664,42 @@ footer{
     flex-direction: row;
     gap: 32px;
 }
+.modal1 {
+    display: block; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+body.dark .modal1{
+  color: #000;
+}
+
+.modal-content1 {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+    max-width: 500px; 
+    text-align: center;
+}
+
+button {
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #ddd;
+}
 @media (max-width: 900px) {
     .realsearch{
         flex-wrap: wrap;
